// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListReport generate Add library dependency \`sap.fe.templates\`  1`] = `
Object {
  "libs": Object {
    "sap.fe.templates": Object {},
  },
}
`;

exports[`ListReport generate all optional settings used 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "RootEntityListReport",
        },
      ],
      "targets": Object {
        "RootEntityListReport": Object {
          "id": "RootEntityListReport",
          "name": "sap.fe.templates.ListReport",
          "options": Object {
            "settings": Object {
              "contextPath": "/RootEntity",
              "controlConfiguration": Object {
                "@com.sap.vocabularies.UI.v1.LineItem": Object {
                  "tableSettings": Object {
                    "condensedTableLayout": true,
                    "selectionMode": "None",
                    "type": "GridTable",
                  },
                },
              },
              "enhanceI18n": "i18n/customRootEntityListReport.properties",
              "navigation": Object {},
              "variantManagement": "Page",
            },
          },
          "type": "Component",
        },
      },
    },
  },
}
`;

exports[`ListReport generate minimal input 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "RootEntityListReport",
        },
      ],
      "targets": Object {
        "RootEntityListReport": Object {
          "id": "RootEntityListReport",
          "name": "sap.fe.templates.ListReport",
          "options": Object {
            "settings": Object {
              "contextPath": "/RootEntity",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
      },
    },
  },
}
`;

exports[`ListReport generate minimal input, plus minUi5Version and contextPath 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "RootEntityListReport",
          "pattern": ":?query:",
          "target": "RootEntityListReport",
        },
      ],
      "targets": Object {
        "RootEntityListReport": Object {
          "id": "RootEntityListReport",
          "name": "sap.fe.templates.ListReport",
          "options": Object {
            "settings": Object {
              "contextPath": "/my/navigation",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
      },
    },
  },
}
`;

exports[`ListReport generate minimal input, plus optional page id 1`] = `
Object {
  "sap.app": Object {
    "id": "my.test.App",
  },
  "sap.ui5": Object {
    "dependencies": Object {
      "libs": Object {
        "sap.fe.templates": Object {},
      },
    },
    "routing": Object {
      "routes": Array [
        Object {
          "name": "DummyPage",
          "pattern": ":?query:",
          "target": "DummyPage",
        },
      ],
      "targets": Object {
        "DummyPage": Object {
          "id": "DummyPage",
          "name": "sap.fe.templates.ListReport",
          "options": Object {
            "settings": Object {
              "contextPath": "/RootEntity",
              "navigation": Object {},
            },
          },
          "type": "Component",
        },
      },
    },
  },
}
`;
